--- a/css/main.css
+++ b/css/main.css
@@ -1,242 +1,623 @@
-* {
-  box-sizing: border-box; 
-  margin: 0;
-}
-
 body {
-  font-family: 'Raleway', sans-serif;
-  background: rgba(242, 242, 242, .6);
+font-family: 'Raleway', sans-serif;
 }
 
-/* NAVBAR */
-.navbar {
-  background-color: plum;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  display: flex;
-  justify-content: left;
+h1, h2, h3, h4, h5 {
+font-family: 'Bree Serif', serif;
 }
 
-.navbar a {
-  font-weight: 200;
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.anchor {
-  display: block;
-  position: relative;
-  top: -70px;
-  visibility: hidden;
-}
-
-/* JUMBOTRON */
-.jumbotron {
-  height: 100vh;
-  background: turquoise;
-  margin-bottom: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-  /* NOMBRE */
-.jumbotron-text h1 {
-  text-transform: uppercase;
-  font-weight: 600;
-  padding: 0.4em;
-  font-size: 3em;
-  margin-bottom: 0;
-}
-
-  /* TEXTO BAJO NOMBRE */
-.jumbotron-text {
-  font-weight: 400;
-  font-size: 2em;
-  color: white;
-  text-align: center;
-  padding-top: 150px;
-}
-
-.jumbotron-text p {
-  margin: 0;
-}
-
-/* REDES SOCIALES */
-.ul-social {
-  text-align: center;
-  padding-left: 0;
-}
-
-.li-social-links {
-  display: inline-block;
-  list-style: none;
-}
-
-.social {
-  font-size: 2em;
-  color: white;
-  padding: 20px;
-}
-
-/* LINK FLECHA */
-#down-arrow {
-  /*position: absolute;
-  width: 100%;*/
-  margin-top: auto;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-#down-arrow a {
-  color: white;
-}
-
-/* CONTENIDO */
-.container {
-  display: flex;
-  flex-direction: column;
+a:hover, a:visited {
+text-decoration:none;
 }
 
 .row {
-  display: flex;
+ margin-right: 0;
+  margin-left: 0;
 }
 
-.white {
-  background: white;
+/* Imagen izquierda */
+#leftHalf {
+   background: url('../img/cover1.jpg') center center;
+    width: 50%;
+    position: absolute;
+    left: 0px;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.side-content {
-  flex: 0 0 16.6%;
+/* Overlay color de imagen izquierda */
+.overlay {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 71, 71, .6);
 }
 
-.main-content {
-  flex: 0 0 66.6%;
-  margin-top: 2rem;
-  margin-bottom: 3rem;
+/* Imagen derecha */
+#rightHalf {
+   background: url('../img/cover2.jpg') center center;
+   width: 50%;
+   position: absolute;
+   right: 0px;
+   height: 100%;
+   background-repeat:no-repeat;
+   background-size: cover;
 }
 
-.side-content-sm {
-  flex: 0 0 10%;
+/* Overlay color de imagen derecha */
+.overlayBis {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(56, 161, 210, .6);
 }
 
-.main-content-lg {
-  flex: 0 0 80%;
-  margin-top: 2rem;
-  margin-bottom: 3rem;
+.intro {
+position: absolute;
+height: 110px;
+margin: auto;
+top: 0;
+left: 0;
+bottom: 0;
+right: 0;
+z-index: 999;
 }
 
-.box-shadow {
-  -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
+.intro h1 {
+text-align: right;
+letter-spacing: 0.2em;
+text-transform: uppercase;
+font-size: 4.1em;
+text-shadow: 1px 1px 10px #3B3B3B;
+background: rgba(1, 1, 1, 0.5);
+padding: 0.3em;
+color: white;
+animation-delay: 0.3s;
+-webkit-animation-delay: 0.3s;
+-moz-animation-delay: 0.3s;
+-o-animation-delay: 0.3s;
+-ms-animation-delay: 0.3s;
 }
 
-h2 {
-  font-weight: 200;
-  font-size: 2rem;
-  color: #31b0d5;
-  text-transform: uppercase;
-  text-align: center;
+.intro h2 {
+font-family: 'Raleway', sans-serif;
+color:white;
+text-align:right;
+padding: 0.3em;	
 }
 
-.content-body {
-  line-height: 1.5;
-  color: rgba(0, 0, 0, .75);
+h1.animated.fadeInUp.left, h2.animated.fadeInUp.left {
+text-align: left;
+} 
+
+.navigation { 
+z-index: 99; 
+width:100%;  
+padding: 20px 0 0 0; 
+position:absolute;
 }
 
-/* PROYECTOS */
-.project-card {
-  display: flex;
-  flex-direction: row;
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, .125);
-  border-radius: 5px;
-  margin-bottom: 30px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
+.navbar-toggle {
+position:relative;
+float:right;
+display:block;
+padding: 9px 10px;
+background: transparent;
+border: 0 none;
+top:0px; 
+font-size: 14px;  
+color:white;
+-webkit-border-radius: 2px;
+-moz-border-radius: 2px;
+border-radius: 2px;
+outline: 0;
+opacity: 1;
+-webkit-transition: all .45s;
+-moz-transition: all .45s;
+transition: all .45s;
+float: right;
 }
 
-.project-image {
-  flex: 1 0 auto;
-}
-
-.project-image img {
+.navbar-toggle .icon-bar {
   display: block;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.project-content {
-  flex: 1 1 auto;
-  padding: 1.25rem;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-/* HABILIDADES */
-.ul-skills {
-  text-align: center;
-  padding-left: 0;
-}
-
-.li-skills {
-  display: inline-block;
-  margin: 7px;
-  padding: 5px 10px;
-  border-radius: 5px;
-  color: white;
-  background: turquoise;
-  list-style: none;
-  cursor: default;
-  font-size: 1.2em;
-}
-
-/* CONTACTO */
-.blue {
-  background: plum;
-  text-align: center;
-}
-
-.contact {
-  max-width: 500px;
-  margin: 0 auto;
-}
-
-.contact input,
-.contact textarea {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  border-radius: 4px;
-  border: none;
-  margin-bottom: 10px;
-  background: papayawhip;
-  color: #fff;
-  -webkit-transition: .5s ease all;
-  transition: .5s ease all;
-}
-
-.contact textarea {
-  height: 150px;
-  resize: none;
-}
-
-.contact button {
-  display: block;
-  width: 100%;
+  width: 35px;
+  height: 4px;
+  margin-left:4px;
   background: #fff;
-  border-radius: 4px;
-  padding: 5px 10px;
-  border: none;
-  color: #3498db;
-  font-weight: 700;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -webkit-transition: .5s ease all;
-  transition: .5s ease all;
+}
+.navbar-toggle .icon-bar + .icon-bar {
+	margin-top: 4px;
+}
+.open .navbar-toggle { 
+	top:-70px; 
+	opacity: 0;  
+}
+.navigation .dropdown-menu {
+	top: -14em;
+	right: 0;
+	font-size: 1em;
+	text-transform: uppercase;
+	padding:0;
+	background:none;
+	border:0 none;
+	border-radius: 2px;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	display:block;
+	opacity:0;
+	-webkit-transition: all .45s;
+	   -moz-transition: all .45s;
+	        transition: all .45s;
+}
+.navigation .dropdown-menu .active { 
+	font-weight:bold;
+}
+.navigation .open .dropdown-menu { 
+	top:2px;
+	opacity:1;
+}
+.navigation .dropdown-menu a { 
+	padding:10px 10px;
+	margin:0;
+	color:white;
+	text-align:center;
+	text-decoration: none;
+	-webkit-border-radius: 2px;
+	   -moz-border-radius: 2px;
+	        border-radius: 2px;
+}
+.navigation .dropdown-menu a:hover { 
+	background:rgba(204,204,204,.4);
+	font-size:1.8em;
+	color:white;
+	-webkit-transition: all ease .5s;
+	-moz-transition: all ease .5s;
+	transition: all ease .5s;
 }
 
-.white-text {
-  color: white;
+#scrollDown {
+position: absolute;
+bottom: 3%;
+width: 100%;
+animation-delay: 2s;
+-webkit-animation-delay: 2s;
+-moz-animation-delay: 2s;
+-o-animation-delay: 2s;
+ms-animation-delay: 2s;
+text-align: center;
+font-size:3em;
+z-index: 3;
 }
+
+#scrollDown a {
+color:white;
+}
+
+.site-inner {
+    position:absolute; 
+	width:100%; 
+	top:100%; 
+	margin-top:3em;
+}
+
+.midimage {
+padding:0;
+}
+
+.overlays {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  z-index: 2;
+  height: 100%;
+  width: 100%;
+	background: -moz-linear-gradient(left,  rgba(255,71,71,.7) 0%, rgba(56,161,210,.7) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,71,71,.7)), color-stop(100%,rgba(56,161,210,.7))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(left,  rgba(255,71,71,.7) 0%,rgba(56,161,210,.7) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(left,  rgba(255,71,71,.7) 0%,rgba(56,161,210,.7) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(left,  rgba(255,71,71,.7) 0%,rgba(56,161,210,.7) 100%); /* IE10+ */
+	background: linear-gradient(to right,  rgba(255,71,71,.7) 0%,rgba(56,161,210,.7) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff4747', endColorstr='#38a1d2',GradientType=1 ); /* IE6-9 */
+}
+
+section {
+	margin-bottom:4em;	
+}
+
+h2.sectionTitle {
+font-size:3em;
+text-transform:uppercase;
+margin-bottom:1em;
+letter-spacing:1rem;
+}
+
+.pretty {
+  line-height: 0.5;
+  text-align: center;
+}
+.pretty span {
+  display: inline-block;
+  position: relative;  
+}
+
+.pretty span:before,
+.pretty span:after {
+  content: "";
+  position: absolute;
+  height: 8px;
+  border-bottom: 3px solid #FF4747;
+  border-top: 3px solid #38a1d2;
+  top: 0;
+  width: 80%;
+}
+
+.pretty span:before {
+  right: 100%;
+  margin-right: 15px;
+}
+
+.pretty span:after {
+  left: 100%;
+  margin-left: 15px;
+}
+
+h3.introTitle {
+font-size:1.5em;
+text-transform:uppercase;
+text-align:center;	
+}
+
+.introduction {
+font-size:1.5em;
+line-height:1.5;	
+}
+
+.introSub {
+color:#FF4747;
+font-size:1.2em;
+}
+
+.containerIntro h4,
+.containerIntro p {
+    display: inline-block;
+	}
+
+	/* Colores principales */
+.blue {
+color: #38a1d2;
+}
+
+.red {
+color:#FF4747;
+}
+
+.work {
+right:0;	
+padding-left:0;
+padding-right:0;
+}
+
+.work img {
+width:100%;
+height:350px;
+}
+
+.work .work-hover {
+position: absolute;
+padding:3px;
+width: 100%;
+height: 100%;
+opacity: 0.6;
+background: rgba(255, 71, 71, .95);
+content: "";
+display: block;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+z-index: 1;
+-webkit-transition: opacity .2s linear;
+  -moz-transition: opacity .2s linear;
+  -ms-transition: opacity .2s linear;
+  -o-transition: opacity .2s linear;
+  transition: opacity .2s linear;
+  -webkit-backface-visibility: hidden;
+}
+
+.work .work-hover.blue {
+background: rgba(56, 161, 210, .95);
+}
+
+.work .work-hover:hover {
+opacity:1;
+}
+
+.work-hover-title {
+width: 100%;
+display: table;
+text-align:center;
+font-size: 20px;
+text-transform:uppercase;
+color: #fff;
+opacity:0;
+position: relative;
+top: 50%;
+transform: translateY(-50%);
+}
+
+.work-hover-title:hover {
+opacity:1;
+}
+
+.btn-hover , .btn-more {
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  color: white;
+  border: 2px solid white;
+  font-size: 20px;
+  line-height: 48px;
+  text-align: center;
+  display: inline-block;
+  margin-left: 10px;
+  -moz-transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+
+.btn-hover:before {
+  font-family: FontAwesome;
+  content:"\f0c1";
+  }
+  
+.btn-more:before {
+font-family: FontAwesome;
+content:"\f00e";
+}
+  
+.btn-hover:hover, .btn-more:hover {
+background-color:rgba(255,255,255,.5);
+}
+
+.btn-hover:focus, .btn-more:focus, .btn-hover:visited, .btn-more:visited {
+outline:0;
+}
+
+.social-icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  color: #FF4747;
+  border: 2px solid #FF4747;
+  font-size: 20px;
+  line-height: 48px;
+  text-align: center;
+  display: inline-block;
+  margin-left: 10px;
+  -moz-transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+
+.social-icon:focus {
+outline:0;
+}
+
+footer {
+  margin: 2em;
+  text-align: center;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+#twitter:before {
+  font-family: FontAwesome;
+  content: "\f099";
+}
+
+#twitter:hover, #twitter:focus {
+  background-color: #00aced;
+  color:white;
+  border-color:transparent;
+}
+
+#gp:before {
+  font-family: FontAwesome;
+  content: "\f0d5";
+}
+
+#gp:hover, #gp:focus {
+  background-color: #dd4b39;
+  color:white;
+  border-color:transparent;
+}
+
+#linkedin:before {
+  font-family: FontAwesome;
+  content: "\f0e1";
+}
+
+#linkedin:hover, #linkedin:focus {
+  background-color: #007bb6;
+  color:white;
+  border-color:transparent;
+}
+#contact {
+margin-top: 4em;
+}
+
+/* Portfolio modals */
+
+.portfolio-modal .modal-content {
+padding: 100px 0;
+min-height: 100%;
+border: 0;
+border-radius: 0;
+text-align: center;
+font-size:1.2em;
+background-clip: border-box;
+-webkit-box-shadow: none;
+box-shadow: none;
+z-index:999;
+}
+
+.portfolio-modal .close-modal {
+position: absolute;
+top: 25px;
+right: 25px;
+width: 75px;
+height: 75px;
+font-size:40px;
+background-color: transparent;
+cursor: pointer;
+z-index:999;
+}
+
+.portfolio-modal .close-modal:before {
+  font-family: FontAwesome;
+  content: "\f00d";
+}
+
+.modal-dialog {
+width:100%;
+margin: 0;
+}
+
+.modal-body {
+vertical-align:middle;
+}
+
+.modal-body p {
+margin:2em 0;
+}
+
+.btn-launch-red a, .btn-close-red {
+  padding: 10px;
+  border-color: transparent;
+  border-radius: 0;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #fff;
+  background-color: #FF4747;
+  border-color: #FF4747;
+  border-radius:0;
+    -moz-transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+
+.btn-launch-red a:hover, .btn-close-red:hover {
+  background-color:darkred;
+  cursor:pointer;
+}
+
+.btn-launch-blue a, .btn-close-blue {
+  padding: 10px;
+  border-color: transparent;
+  border-radius: 0;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #fff;
+  background-color: #38a1d2;
+  border-color: #38a1d2;
+  border-radius:0;
+    -moz-transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+
+.btn-launch-blue a:hover, .btn-close-blue:hover {
+  background-color:darkblue;
+  cursor:pointer;
+}
+
+/* Responsive */
+@media (min-width: 768px) and (max-width: 979px) { 
+	
+	#me {
+   	margin: 0 auto;
+	}
+	
+}
+
+@media (max-width: 767px) { 
+	
+	.intro h1 {
+	font-size:1.8em;
+	letter-spacing:0;	
+	}
+	
+	.intro h2 {
+	font-size:1.3em;	
+	}
+	
+	h2.sectionTitle {
+	font-size:1.5em;
+	margin-bottom:0.8em;
+	letter-spacing:0.2rem;	
+	}
+	
+	.pretty span:before,
+.pretty span:after {
+  width: 10%;
+}
+	
+	#me {
+	margin: 0 auto;
+	}
+
+ }
+
+@media (max-width: 480px) {
+	
+	.intro h1 {
+	font-size:1.3em;
+	letter-spacing:0;	
+	}
+	
+	.intro h2 {
+	font-size:1em;	
+	}
+	
+	.navigation {
+	padding:0;
+	}
+	
+	.navigation .dropdown-menu a:hover { 
+	font-size:1.4em;
+	}
+	
+	h2.sectionTitle {
+	font-size:1.5em;
+	margin-bottom:0.8em;
+	letter-spacing:0.2rem;	
+	}
+	
+	.pretty span:before,
+.pretty span:after {
+  width: 10%;
+}
+	
+	#me {
+	margin: 0 auto;
+	}
+}
+
+	
